	* Apply gnotime-desktop.patch from Toshio Kuratomi <toshio@tiki-lounge.com>
	* Apply gnotime-help.patch from Toshio Kuratomi <toshio@tiki-lounge.com>
	  This patch fixes the 'help' buttons in various dialogs
	* Apply gnotime-idle.patch from Toshio Kuratomi <toshio@tiki-lounge.com>
	  Fixes idle time so that it works with Linux 2.6 kernel /proc/interrupts

Sun May 23, 2004 Linas Vepstas <linas@linas.org>
	* Prep for 2.2.1 release: tag gnotime-2-2-1

Tue Apr 27, 2004 Linas Vepstas <linas@linas.org>
	* props-task.c, task_properties.glade: convert dialog
	  to GtkDialog, make dialog interactive (trash two buttons),
	  enlarge the notes area, making it usable.
	* gtt.scm, time-interval.ghtml:  add filter to make the
	  HTML diary display resemble the plain-text diary markup.
	* idle-dialog.c: if project names had a bare & ampersand in them, 
	  then Pango would not display properly.  Change to escape & into &amp;
	* journal.c: add to interval menu, to reparent intervals
	  to tasks above or below.  Makes time management easier.
	* primer.ghtml: show how to find parent/peer projects.
	* lib/qof: sync with latest qof sources

Sun Apr 25 2004 Linas Vepstas <linas@linas.org>
	* Prep for 2.2.0 release: tag gnotime-2-2-0

Wed Apr 21 2004 Linas Vepstas <linas@linas.org>
	* prefs.c, props-proj.c props-task.c: Fix core dump 
	  when user clicks on 'help' button.
	* journal.c: Fix coredump/hang due to double-free
	* menus.c: Fix memory-corruption/core-dump bug.
	* gconf-io-p.h: Fix core dump when saving NULL strings.
	* journal.c: Fix flyover help so that it actually shows project text.
	* journal.c: remember last file that user saved to.
	* journal.c: add support for images (png/jpeg/gif/etc.)
	* ghtml.c, ghtml.h: add support for include files
	* gtt.css: add rudimentary CSS Cascading Style Sheet.
	* *.ghtml: rework all reports to use a new style
	* journal.ghtml: create new nicer display style.
	* journal.c: add report publication dialog.