@@ -1,11 +1,7 @@
 
-
 EXTRA_DIST =        \
 	README           \
 	gnotime.spec.in  \
 	gnotime.spec
 
-
-
-								
 # CLEANFILES = gnotime.spec
