@@ -6,6 +6,8 @@ Fri Aug 20, 2004 Linas Vepstas <linas@linas.org>
 	  This patch fixes the 'help' buttons in various dialogs
 	* Apply gnotime-idle.patch from Toshio Kuratomi <toshio@tiki-lounge.com>
 	  Fixes idle time so that it works with Linux 2.6 kernel /proc/interrupts
+	* Apply gnotime-fedora.patch from Toshio Kuratomi 
+	  Fixes the fedora build specs (sourceforge patch 995568)
 
 Sun May 23, 2004 Linas Vepstas <linas@linas.org>
 	* Prep for 2.2.1 release: tag gnotime-2-2-1
